# mynewqt6thing

./: .clang-tidy  CMakeLists.txt  home.cpp  home.hpp  home.ui  login.cpp  login.hpp  login.ui  main.cpp  register.cpp  register.hpp  register.ui  sdl3game1.cpp  sdl3game1.hpp  sdl3game1_desc.cpp  sdl3game1_desc.hpp  sdl3game1_desc.ui  sdl3game2_desc.cpp  sdl3game2_desc.hpp  sdl3game2_desc.ui  sdl3game3_desc.cpp  sdl3game3_desc.hpp  sdl3game3_desc.ui  sdl3game4.cpp  sdl3game4.hpp  sdl3game4_desc.cpp  sdl3game4_desc.hpp  sdl3game4_desc.ui
assets/: common.qrc
